--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-12 col-md-6 text-star align-self-center border-start">
                     
-                    <a href=""><i class="bi bi-github fs-1"></i></a>
+                    <a href="https://github.com/CatDog39/Evaluacion-web-1-Cinema"><i class="bi bi-github fs-1"></i></a>
                 </div>
             </div>
         </div>
